fix header-logo-link and nav collapse

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,12 +52,40 @@ a {
   position: relative;
 }
 
+.header-logo-link {
+  display: block;
+  width: 20vw !important;
+  min-width: 80px;
+  max-width: 350px;
+}
+
 .header-logo-link span {
   overflow: visible !important;
 }
 
 img.header-logo-img {
-  top: 160px !important;
+  top: 10vw !important;
+}
+
+.navbar-collapse.show {
+  background: #92d4f4;
+  text-align: right;
+  padding-right: 20px;
+  height: 40vh;
+  position: fixed;
+  top: 100px;
+  right: 30px;
+  width: 60vw;
+  border-radius: 5px;
+}
+
+.navbar-collapse.show a {
+  font-size: 44px;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  padding: 20px 0;
+  text-transform: lowercase;
+  font-weight: 100;
 }
 
 .footer {
@@ -71,6 +99,7 @@ img.header-logo-img {
   border-bottom: 10px solid #ccc;
   margin-top: -100px;
   padding-top: 200px;
+  background: #d7edf9;
 }
 
 .hero-full-bg-text {
@@ -85,10 +114,10 @@ img.header-logo-img {
   position: absolute;
   top: 0;
   left: 0;
-  background: #fff;
+  background: transparent;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
